chore: cleanup design docs

--- a/docs/design/2023-11-29-projects.md
+++ b/docs/design/2023-11-29-projects.md
@@ -1,11 +1,11 @@
 ---
-title: "Projects and Project Members"
+title: Projects and Project Members
 date: 2023-11-29
-status: "Draft"
+status: Implemented
 authors:
-  - "Kevin Neaton <kevin@abstractgoods.cc>"
-version: "v1.0"
-summary: "This document outlines the design for the database schema of the projects, project_users, and project_invitations tables, focusing on the relationships between users and projects, project ownership, and the necessary RLS policies."
+  - Kevin Neaton <kevin@abstractgoods.cc>
+version: v1.0
+summary: This document outlines the design for the database schema of the projects, project_users, and project_invitations tables, focusing on the relationships between users and projects, project ownership, and the necessary RLS policies.
 ---
 
 ## Summary
